--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./static/styles/styles.css">
     <title>Admin Page</title>
 </head>
 <body>
@@ -20,5 +20,5 @@
     <main></main>
 </body>
 
-<script src="./graph_api.js"></script>
+<script src="./static/js/script.js"></script>
 </html>
