--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./styles.css">
-<title>Message Visualization</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Message Visualization</title>
 </head>
 <body>
-<div id="graph"></div>
-<form id="message-form">
-    <label for="sender">Sender:</label>
-    <select id="sender">
-    </select>
-    <label for="receiver">Receiver:</label>
-    <select id="receiver">
-    </select>
-    <textarea id="message" placeholder="Type your message here"></textarea>
-    <button type="submit">Send Message</button>
-</form>
-<script type="module" src="./script.js"></script>
+    <main>
+        <div id="graph"></div>
+    </main>
+    <form id="sender-form">
+        <label for="sender">Sender:</label>
+        <select id="sender"></select>
+        <label for="receiver">Receiver:</label>
+        <select id="receiver"></select>
+        <button type="submit">Go</button>
+    </form>
+    <button id="receive-graph-btn" type="button">Receive Graph</button>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
